--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.799.0",
     "@aws-sdk/client-s3": "^3.787.0",
+    "@aws-sdk/lib-dynamodb": "^3.799.0",
     "@aws-sdk/s3-request-presigner": "^3.787.0",
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-dialog": "^1.1.11",
@@ -27,6 +29,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.2",
     "tailwind-merge": "^3.2.0",
+    "usehooks-ts": "^3.1.1",
     "zod": "^3.24.3"
   },
   "devDependencies": {
