--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "@aws-sdk/s3-request-presigner": "^3.787.0",
     "@aws-sdk/util-dynamodb": "^3.804.0",
     "@hookform/resolvers": "^5.0.1",
-    "@radix-ui/react-dialog": "^1.1.11",
-    "@radix-ui/react-popover": "^1.1.11",
+    "@radix-ui/react-dialog": "^1.1.13",
+    "@radix-ui/react-popover": "^1.1.13",
     "@radix-ui/react-select": "^2.2.2",
     "@radix-ui/react-slider": "^1.3.2",
     "@radix-ui/react-slot": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
