--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-hook-form": "^7.56.2",
     "tailwind-merge": "^3.2.0",
     "usehooks-ts": "^3.1.1",
-    "zod": "^3.24.3"
+    "zod": "^3.24.3",
+    "zustand": "^4.5.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
