--- a/package.json
+++ b/package.json
@@ -1,50 +1,52 @@
 {
-  "name": "hooparchives",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.799.0",
-    "@aws-sdk/client-s3": "^3.787.0",
-    "@aws-sdk/lib-dynamodb": "^3.799.0",
-    "@aws-sdk/s3-request-presigner": "^3.787.0",
-    "@aws-sdk/util-dynamodb": "^3.804.0",
-    "@hookform/resolvers": "^5.0.1",
-    "@radix-ui/react-dialog": "^1.1.13",
-    "@radix-ui/react-popover": "^1.1.13",
-    "@radix-ui/react-select": "^2.2.2",
-    "@radix-ui/react-slider": "^1.3.2",
-    "@radix-ui/react-slot": "^1.2.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "cmdk": "^1.1.1",
-    "date-fns": "^4.1.0",
-    "lucide-react": "^0.503.0",
-    "next": "15.3.1",
-    "react": "^19.0.0",
-    "react-day-picker": "^8.10.1",
-    "react-dom": "^19.0.0",
-    "react-hook-form": "^7.56.2",
-    "tailwind-merge": "^3.2.0",
-    "usehooks-ts": "^3.1.1",
-    "zod": "^3.24.3",
-    "zustand": "^4.5.7"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.1",
-    "tailwindcss": "^4",
-    "tw-animate-css": "^1.2.8",
-    "typescript": "^5"
-  }
+	"name": "hooparchives",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@aws-sdk/client-dynamodb": "^3.799.0",
+		"@aws-sdk/client-s3": "^3.787.0",
+		"@aws-sdk/lib-dynamodb": "^3.799.0",
+		"@aws-sdk/s3-request-presigner": "^3.787.0",
+		"@aws-sdk/util-dynamodb": "^3.804.0",
+		"@hookform/resolvers": "^5.0.1",
+		"@radix-ui/react-dialog": "^1.1.13",
+		"@radix-ui/react-popover": "^1.1.13",
+		"@radix-ui/react-select": "^2.2.2",
+		"@radix-ui/react-slider": "^1.3.2",
+		"@radix-ui/react-slot": "^1.2.0",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"cmdk": "^1.1.1",
+		"date-fns": "^4.1.0",
+		"lodash": "^4.17.21",
+		"lucide-react": "^0.503.0",
+		"next": "15.3.1",
+		"react": "^19.0.0",
+		"react-day-picker": "^8.10.1",
+		"react-dom": "^19.0.0",
+		"react-hook-form": "^7.56.2",
+		"tailwind-merge": "^3.2.0",
+		"usehooks-ts": "^3.1.1",
+		"zod": "^3.24.3",
+		"zustand": "^4.5.7"
+	},
+	"devDependencies": {
+		"@eslint/eslintrc": "^3",
+		"@tailwindcss/postcss": "^4",
+		"@types/lodash": "^4.17.18",
+		"@types/node": "^20",
+		"@types/react": "^19",
+		"@types/react-dom": "^19",
+		"eslint": "^9",
+		"eslint-config-next": "15.3.1",
+		"tailwindcss": "^4",
+		"tw-animate-css": "^1.2.8",
+		"typescript": "^5"
+	}
 }
