--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
 		"lodash": "^4.17.21",
 		"lucide-react": "^0.503.0",
 		"next": "15.3.1",
+		"next-themes": "^0.4.6",
 		"react": "^19.0.0",
 		"react-day-picker": "^8.10.1",
 		"react-dom": "^19.0.0",
 		"react-hook-form": "^7.56.2",
+		"sonner": "^2.0.5",
 		"tailwind-merge": "^3.2.0",
 		"usehooks-ts": "^3.1.1",
 		"zod": "^3.24.3",
