--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@aws-sdk/s3-request-presigner": "^3.787.0",
 		"@aws-sdk/util-dynamodb": "^3.804.0",
 		"@hookform/resolvers": "^5.0.1",
+		"@radix-ui/react-checkbox": "^1.3.2",
 		"@radix-ui/react-dialog": "^1.1.13",
 		"@radix-ui/react-popover": "^1.1.13",
 		"@radix-ui/react-select": "^2.2.2",
