--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"@aws-sdk/client-dynamodb": "^3.799.0",
 		"@aws-sdk/client-s3": "^3.787.0",
+		"@aws-sdk/client-sqs": "^3.840.0",
 		"@aws-sdk/lib-dynamodb": "^3.799.0",
 		"@aws-sdk/s3-request-presigner": "^3.787.0",
 		"@aws-sdk/util-dynamodb": "^3.804.0",
