--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"react-hook-form": "^7.56.2",
 		"sonner": "^2.0.5",
 		"tailwind-merge": "^3.2.0",
+		"ulid": "^3.0.1",
 		"usehooks-ts": "^3.1.1",
 		"zod": "^3.24.3",
 		"zustand": "^4.5.7"
