--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"lodash": "^4.17.21",
 		"lucide-react": "^0.503.0",
 		"next": "15.3.1",
+		"next-auth": "^5.0.0-beta.29",
 		"next-themes": "^0.4.6",
 		"react": "^19.0.0",
 		"react-day-picker": "^8.10.1",
