--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@aws-sdk/client-cognito-identity": "^3.848.0",
 		"@aws-sdk/client-dynamodb": "^3.799.0",
 		"@aws-sdk/client-s3": "^3.787.0",
 		"@aws-sdk/client-sqs": "^3.840.0",
@@ -27,6 +28,7 @@
 		"clsx": "^2.1.1",
 		"cmdk": "^1.1.1",
 		"date-fns": "^4.1.0",
+		"jwt-decode": "^4.0.0",
 		"lodash": "^4.17.21",
 		"lucide-react": "^0.503.0",
 		"next": "15.3.1",
