--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"@aws-sdk/client-cognito-identity": "^3.848.0",
+		"@aws-sdk/client-cognito-identity-provider": "^3.848.0",
 		"@aws-sdk/client-dynamodb": "^3.799.0",
 		"@aws-sdk/client-s3": "^3.787.0",
 		"@aws-sdk/client-sqs": "^3.840.0",
