--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
 		"@types/react-dom": "^19",
 		"eslint": "^9",
 		"eslint-config-next": "15.3.1",
+		"prettier": "3.6.2",
 		"tailwindcss": "^4",
 		"tw-animate-css": "^1.2.8",
 		"typescript": "^5"
